# traffic_surveillance_anomaly_detection

./: .gitignore  .gitmodules  README.md  download_shanghaitech_campus.py  download_tad.py  extract_features.py  yolo26n-cls.pt
traffic-anomaly-vlm/: .env.example  PROJECT_STRUCTURE.md  README.md  debug.py  debug_refine_track.py  pyproject.toml  requirements.txt
traffic-anomaly-vlm/artifacts/git_patches/: raft-local.patch
traffic-anomaly-vlm/configs/: botsort.yaml  bytetrack.yaml  default.yaml
traffic-anomaly-vlm/local_labeling_tools/: README.md  annotate_video_intervals.py
traffic-anomaly-vlm/scripts/: convert_frames_to_videos.py  convert_videos_to_frames.py  run_offline.py  run_online.py  run_pure_vlm_baseline.py  smoke_test.py  visualize_subscores.py
traffic-anomaly-vlm/scripts/sh/: run_offline.sh  test.sh  visualize_track.sh
traffic-anomaly-vlm/src/: __init__.py  main.py  schemas.py  settings.py
traffic-anomaly-vlm/src/core/: __init__.py  logger.py  sampler.py  utils.py  (+1 more)
traffic-anomaly-vlm/tests/: test_coarse_router_tree.py  test_eval_metrics.py  test_event_tree.py  test_eventness.py  test_features.py  test_perception.py  test_pipeline.py  test_schemas.py  test_video_io.py  test_vlm.py
traffic-anomaly-vlm/tmp/: augment_scene_cache.py  calibrate_track_params.py  compute_features.py  orchestrator_raw_score.py  quick_check_track_refine.py  run_boundary_behavior_search.py  run_component_observation.py  run_object_scene_refined_search.py  run_raw_score_sweep.py  run_vlm_refine_span_search.py  validate_coarse_router_tree.py  validate_event_tree.py
(+529 files in other folders)
