[project]
name = "traffic-anomaly-vlm"
version = "0.1.0"
description = "Traffic anomaly detection and understanding with YOLO tracking + local Transformers VLM"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "numpy",
  "opencv-python",
  "torch",
  "torchvision",
  "transformers",
  "accelerate",
  "pydantic",
  "pyyaml",
  "tqdm",
  "matplotlib",
  "pillow",
  "scipy",
  "ultralytics",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
